<resources>
    <string name="app_name">Symput</string>
    <string name="language_picker_title">Change language</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="enable_vibration">Enable Vibration</string>
    <string name="enable_sound">Enable Sound</string>
    <string name="symput_website"><a href="https://symput-site.vercel.app/">Visit our website</a></string>
    <string name="please_send_feedback_to">Want to give feedback?</string>
    <string name="about_us">About Us</string>
    <string name="about_us_description">
        At ut earum officiis aliquam incidunt fugit fuga. Commodi ducimus illo deleniti quia dolorum expedita rerum. Repellendus ut laudantium repellendus. Qui nostrum est cumque vel hic quam. Voluptas ad non eum eos sequi.
        Asperiores nihil harum ad numquam ut fugiat. Qui et velit quo et sit dolore. Distinctio placeat veritatis voluptate voluptas.
    </string>
    <string name="getting_started">Getting Started</string>
    <string name="choose_keyboard">Make Symput your keyboard</string>
    <string name="action_test_keyboard">Test it out!</string>
    <string name="enter_hint" >Enter some text here</string>
</resources>
